<resources>
    <string name="app_name">Persistencia</string>
    <string name="correo">Correo:</string>
    <string name="ejemploCorreo">example@something.com</string>
    <string name="usuario">Usuario:</string>
    <string name="miusuario">miUsuario</string>
    <string name="guardar">Guardar</string>
    <string name="mostrar">Mostrar</string>
    <string name="xxxxxxxxxx">XXXXXXXXXX</string>
</resources>
