<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.persistencia.jalberssonplazas.persistencia.inicioActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:layout_marginLeft="@dimen/marginLeft"
                android:textSize="@dimen/tamanioLabel"
                android:text="@string/correo"
                />
            <EditText
                android:id="@+id/etxtCorreoIn"
                android:layout_marginLeft="@dimen/marginLeft"
                android:hint="@string/ejemploCorreo"
                android:inputType="textEmailAddress"
                android:background="#BBBBBB"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_marginLeft="@dimen/marginLeft"
                android:textSize="@dimen/tamanioLabel"
                android:text="@string/usuario"
                />
            <EditText
                android:id="@+id/etxtUsuarioIn"
                android:layout_marginLeft="@dimen/marginLeft"
                android:hint="@string/miusuario"
                android:background="#BBBBBB"
                />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginLeft"
        >
        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="@dimen/tamanioBoton"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_marginLeft="@dimen/marginLeft"
            />
        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="@dimen/tamanioBoton"
            android:layout_height="wrap_content"
            android:text="@string/mostrar"
            />
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLeft"
        >

        <TableRow>
            <TextView
                android:layout_marginLeft="@dimen/marginLeft"
                android:textSize="@dimen/tamanioLabel"
                android:text="@string/correo"
                />
            <EditText
                android:id="@+id/etxtCorreoOut"
                android:layout_marginLeft="@dimen/marginLeft"
                android:hint="@string/xxxxxxxxxx"
                android:background="#BBBBBB"
                android:enabled="false"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_marginLeft="@dimen/marginLeft"
                android:textSize="@dimen/tamanioLabel"
                android:text="@string/usuario"
                />
            <EditText
                android:id="@+id/etxtUsuarioOut"
                android:layout_marginLeft="@dimen/marginLeft"
                android:hint="@string/xxxxxxxxxx"
                android:enabled="false"
                android:background="#BBBBBB"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>
